# lqccs-interpreter

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  examples.md  lqccs-lang.opam  lqccsint  runtests.sh
lib/: ast.ml  ast_with_loc.ml  dune  errors.ml  errors.mli  eval.ml  eval.mli  location.ml  location.mli  parser.mly  parserMessages.messages  parsing.ml  parsing.mli  pastebin.c  qop.ml  qop.mli  scanner.mli  scanner.mll  string_of.ml  string_of.mli  symbol_table.ml  symbol_table.mli  typechecker.ml  typechecker.mli
test/: dune  test_eval.ml  test_parser.ml  test_qop.ml  test_typecheck.ml
test/samples/: test-decl1.lq  test-par1.lq
test/samples/parser/: fail-if1.lq  fail-if2.lq  fail-if3.lq  fail-if4.lq  fail-if5.lq  fail-if6.lq  fail-if7.lq  fail-nondeterm1.lq  fail-nondeterm2.lq  fail-par1.lq  fail-par2.lq  fail-par3.lq  test-if1.lq  test-if10.lq  test-if11.lq  test-if12.lq  test-if13.lq  test-if2.lq  test-if3.lq  test-if4.lq  test-if5.lq  test-if6.lq  test-if7.lq  test-if8.lq  test-if9.lq  test-nondeterm1.lq  test-nondeterm2.lq  test-par1.lq  test-par10.lq  test-par2.lq  test-par3.lq  test-par4.lq  test-par5.lq  test-par6.lq  test-par7.lq  test-par8.lq  test-par9.lq  test-simple1.lq  test-simple2.lq
