(test
  (name test_typecheck)
  (libraries lqccsint)
  (modules test_typecheck)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

(test
  (name test_parser)
  (libraries lqccsint)
  (modules test_parser)
  (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
